--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="/to_do_task/assets/css/global.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/global.css"/>
     <title>To Do Task</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-
+        
     </main>
     <footer>
 
