pagina de devs criada

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/global.css"/>
-    <title>To Do Task</title>
+    <title>To Do Task - Inicio</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
             <h1>TO DO TASK</h1>
         </div>
         <nav>
-            <a href="">
+            <a href="./assets/pages/devs.html">
                 <img src="./assets/imagens/dev-icon.png" alt="pag_dev">
             </a>
             <a href="">
