--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/global.css"/>
-    <script type="text/javascript" src="./js/criartask.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/fontawesome-free-6.4.0-web/css/all.min.css"/>
     <title>To Do Task - Inicio</title>
@@ -33,12 +33,10 @@
     <main>
         <section>
             <textarea class="desctask" rows="5" id="texto"></textarea>
-            <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>Save</button>
+            <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
              
         </section> 
         <div id="error"></div>
-
-        <button onclick="criarTextarea()">Criar Textarea</button>
     </main>
     <footer>
 
