criação de lembretes funcionando

--- a/index.html
+++ b/index.html
@@ -34,9 +34,14 @@
         <section>
             <textarea class="desctask" rows="5" id="texto"></textarea>
             <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
-             
         </section> 
         <div id="error"></div>
+        asdasdasd
+        <section>
+            <div id="lembretes">
+                <br>
+            </div>
+        </section>
     </main>
     <footer>
 
