--- a/index.html
+++ b/index.html
@@ -31,15 +31,13 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="criarlembrete">
             <textarea class="desctask" rows="5" id="texto"></textarea>
             <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
         </section> 
         <div id="error"></div>
-        asdasdasd
         <section>
             <div id="lembretes">
-                <br>
             </div>
         </section>
     </main>
