criação do botão delete

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <section class="criarlembrete">
             <textarea class="desctask" rows="5" id="texto"></textarea>
             <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
+            <button type="button" class="btn-delete" id="buttonDelete"><i class="fa-solid fa-trash"></i> Excluir</button>
         </section> 
         <div id="error"></div>
         <section>
