--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
     <main>
         <section class="criarlembrete">
             <textarea class="desctask" rows="5" id="texto"></textarea>
-            <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
-            <button type="button" class="btn-delete" id="buttonDelete"><i class="fa-solid fa-trash"></i> Excluir</button>
+            <div class="button">             
+                <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
+                <button type="button" class="btn-delete" id="buttonDelete"><i class="fa-solid fa-trash"></i> Excluir</button>
+            </div>
         </section> 
         <div id="error"></div>
-        <section>
+        <section id="sec2">
             <div id="lembretes">
             </div>
         </section>
