--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="criarlembrete">
-            <textarea class="desctask" rows="5" id="texto"></textarea>
+            <textarea class="desctask" rows="5" id="texto" placeholder="Digite sua task/lembrete"></textarea>
             <div class="button">             
                 <button type="button" class="btn-save" id="buttonSave"><i class="fa fa-floppy-disk"></i>   Save</button>
                 <button type="button" class="btn-delete" id="buttonDelete"><i class="fa-solid fa-trash"></i> Excluir</button>
