comentarios feitos, botão de ajuda programado

--- a/assets/pages/devs.html
+++ b/assets/pages/devs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/global.css"/>
     <link rel="stylesheet" type="text/css" href="../css/devs.css"/>
+    <link rel="icon" type="image/png" href="../imagens/icon_task.png"/>
     <title>To Do Task - devs</title>
 </head>
 <body>
@@ -16,60 +17,55 @@
             </a>
         </div>
         <div class="logo_home">
-            <h1>TO DO TASK</h1>
+            <h1>TO DO TASK - Devs</h1>
+
         </div>
         <nav>
-            <a href="">
-                <img src="../imagens/dev-icon.png" alt="pag_dev">
-            </a>
-            <a href="">
-                <img src="../imagens/help-icon-png-0.jpg" alt="help">
-            </a>
         </nav>
     </header>
     <main>
         <section class="sec1">
             <div class="dev1">
-                <img src="../imagens/asdasdasd.PNG" alt="dev1">
+                <img src="../imagens/terry-crews-cantando-1200x900.webp" alt="dev1">
                 <div class="devdesc">
-                    <p>Nome: Dhomini Viana</p>
-                    <p>Github: DhominiViana</p>
+                    <p>Nome: </p>
+                    <p>Github: </p>
                 </div>
             </div>
             <div class="dev2">
-                <img src="../imagens/asdasdasd.PNG" alt="dev2">
+                <img src="../imagens/terry-crews-cantando-1200x900.webp" alt="dev2">
                 <div class="devdesc">
-                    <p>Nome: 2</p>
+                    <p>Nome: </p>
                     <p>Github:</p>
                 </div>
             </div>
             <div class="dev3">
-                <img src="../imagens/asdasdasd.PNG" alt="dev3">
+                <img src="../imagens/terry-crews-cantando-1200x900.webp" alt="dev3">
                 <div class="devdesc">
-                    <p>Nome: 3</p>
+                    <p>Nome: </p>
                     <p>Github:</p>
                 </div>
             </div>
         </section>
         <section class="sec2">
             <div class="dev4">
-                <img src="../imagens/asdasdasd.PNG" alt="dev4">
+                <img src="../imagens/terry-crews-cantando-1200x900.webp" alt="dev4">
                 <div class="devdesc">
-                    <p>Nome: 4</p>
+                    <p>Nome: </p>
                     <p>Github:</p>
                 </div>
             </div>
             <div class="dev5">
-                <img src="../imagens/asdasdasd.PNG" alt="dev5">
+                <img src="../imagens/terry-crews-cantando-1200x900.webp" alt="dev5">
                 <div class="devdesc">
-                    <p>Nome: 5</p>
+                    <p>Nome: </p>
                     <p>Github:</p>
                 </div>
             </div>
             <div class="dev6">
-                <img src="../imagens/asdasdasd.PNG" alt="dev6">
+                <img src="../imagens/terry-crews-cantando-1200x900.webp" alt="dev6">
                 <div class="devdesc">
-                    <p>Nome: 6</p>
+                    <p>Nome: </p>
                     <p>Github:</p>
                 </div>
             </div>
