--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="./js/main.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/fontawesome-free-6.4.0-web/css/all.min.css"/>
+    <link rel="icon" type="image/png" href="./assets/imagens/icon_task.png"/>
     <title>To Do Task - Inicio</title>
 </head>
 <body>
@@ -19,13 +20,13 @@
             </a>
         </div>
         <div class="logo_home">
-            <h1>TO DO TASK</h1>
+            <h1>TO DO TASK - Inicio</h1>
         </div>
         <nav>
             <a href="./assets/pages/devs.html">
                 <img src="./assets/imagens/dev-icon.png" alt="pag_dev">
             </a>
-            <a href="">
+            <a href="#" onclick="exibirImagensPopup()">
                 <img src="./assets/imagens/help-icon-png-0.jpg" alt="help">
             </a>
         </nav>
@@ -45,7 +46,10 @@
         </section>
     </main>
     <footer>
-
+        <div id="popup" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 70%; background-color: rgba(0, 0, 0, 0.7); z-index: 9999;">
+            <img id="imagem" src="" style="display: block; max-width: 80%; max-height: 80%; margin: 10% auto;">
+            <button id="botao-proximo" style="display: block; margin: 0 auto;">Próximo</button>
+          </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
